--- a/chat.html
+++ b/chat.html
@@ -20,14 +20,14 @@
 
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "AIzaSyDaB5B5Z_HarxWPV5FgkEiK0jdS0_80sGc",
-            authDomain: "datas-30e24.firebaseapp.com",
-            databaseURL: "https://datas-30e24.firebaseio.com",
-            projectId: "datas-30e24",
-            storageBucket: "datas-30e24.appspot.com",
-            messagingSenderId: "226585081860",
-            appId: "1:226585081860:web:dc23ffba021775767f1d51",
-            measurementId: "G-PY42Q03GEB"
+            apiKey: "<Api_Key>",
+            authDomain: "",
+            databaseURL: "",
+            projectId: "<Project_ID>",
+            storageBucket: "",
+            messagingSenderId: "",
+            appId: "",
+            measurementId: ""
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
