--- a/chat.html
+++ b/chat.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <script src="chat.js"></script>
     <title>
-
+        SAKSHAM KISAN
     </title>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
@@ -20,14 +20,14 @@
 
         // Your web app's Firebase configuration
         var firebaseConfig = {
-            apiKey: "<Api_Key>",
-            authDomain: "",
-            databaseURL: "",
-            projectId: "<Project_ID>",
-            storageBucket: "",
-            messagingSenderId: "",
-            appId: "",
-            measurementId: ""
+            apiKey: "AIzaSyDaB5B5Z_HarxWPV5FgkEiK0jdS0_80sGc",
+            authDomain: "datas-30e24.firebaseapp.com",
+            databaseURL: "https://datas-30e24.firebaseio.com",
+            projectId: "datas-30e24",
+            storageBucket: "datas-30e24.appspot.com",
+            messagingSenderId: "226585081860",
+            appId: "1:226585081860:web:dc23ffba021775767f1d51",
+            measurementId: "G-PY42Q03GEB"
         };
         // Initialize Firebase
         firebase.initializeApp(firebaseConfig);
